src/objects/ScoreCardCostInnovation__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Name of the Account</description>
        <inlineHelpText>Name of the Supplier</inlineHelpText>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>ScoreCardCostInnovations</relationshipLabel>
        <relationshipName>ScoreCardCostInnovations</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_Continuity_Score__c</fullName>
        <label>Business Continuity Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSA_Status_Score__c</fullName>
        <label>CSA Status Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cost_Competiveness_Score__c</fullName>
        <label>Cost Competiveness Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cost_Control_Score__c</fullName>
        <label>Cost Control Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Innovative_Concepts_Score__c</fullName>
        <label>Innovative Concepts Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>L3_SubMetric_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>L3 SubMetric Name</label>
        <referenceTo>SSC_L3SubMetric__c</referenceTo>
        <relationshipLabel>ScoreCardCostInnovations</relationshipLabel>
        <relationshipName>ScoreCardCostInnovations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Metric_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Metric Name</label>
        <referenceTo>SSC_Metric__c</referenceTo>
        <relationshipLabel>ScoreCardCostInnovations</relationshipLabel>
        <relationshipName>ScoreCardCostInnovations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <label>Month</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ORacle_Customer_Number__c</fullName>
        <label>ORacle Customer Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OracleCustNum__c</fullName>
        <formula>Account_Name__r.Oracle_Customer_Number__c</formula>
        <label>OracleCustNum</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Terms_Score__c</fullName>
        <label>Payment Terms Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reduction_Performance_Score__c</fullName>
        <label>Reduction Performance Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SOI_Score__c</fullName>
        <label>SOI Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Previous</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Current</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sub_Metric_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub Metric Name</label>
        <referenceTo>SSC_SubMetric__c</referenceTo>
        <relationshipLabel>ScoreCardCostInnovations</relationshipLabel>
        <relationshipName>ScoreCardCostInnovations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Supplier_Score__c</fullName>
        <label>Supplier Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Technology_Roadmap_Score__c</fullName>
        <label>Technology Roadmap Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transparency_Score__c</fullName>
        <label>Transparency Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>ScoreCardCostInnovation</label>
    <nameField>
        <label>ScoreCard Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ScoreCardCostInnovations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>